--- a/index.html
+++ b/index.html
@@ -253,9 +253,10 @@ for small <font face="serif"><i>k</i></font>'s.
 <p> <a name="p40"></a> </p>
 
 <div class="cite">
-<font color="300080">[40]</font> Sergeev I. S. <i><font color="300080"> On the multiplicative complexity of polynomials.</font></i>   Diskretnaya Matematika (Discrete Mathematics). 2022. <b>34</b>(3), 85-89. <a href="https://doi.org/10.4213/dm1714">DOI</a>
-    PDF (in Russian) is available on the
-    <a href="https://www.mathnet.ru/php/archive.phtml?wshow=paper&jrnid=dm&paperid=1714&option_lang=eng">web-page</a>
+<font color="300080">[40]</font> Sergeev I. S. <i><font color="300080"> On the multiplicative complexity of polynomials.</font></i>   
+Discrete Mathematics and Applications. 2024. <b>34</b>(1), 29-32.
+    <a href="https://doi.org/10.1515/dma-2024-0003">DOI</a> (translation of the
+    <a href="https://www.mathnet.ru/php/archive.phtml?wshow=paper&jrnid=dm&paperid=1714&option_lang=eng">paper</a> (2022) from <i>Diskretnaya matematika</i>)
 </div>
 
 <div class="comm">
@@ -693,7 +694,7 @@ Matematicheskie Zametki</i>)
  &#9672 A full version of [<a href="#p14">14</a>]. We establish the exact complexity of the minimal width-<font face="serif">2<sup><i>n</i></sup></font> depth-<font face="serif"><i>n</i></font> general (parallel) prefix circuit improving over an earlier result by F. E. Fich (1982). It is <font face="serif">3.5&#183;2<sup><i>n</i></sup> &#8211; (8.5+3.5(<i>n</i> mod 2))2<sup>&#8970<i>n</i>/2&#8971</sup> + <i>n</i> + 5</font>. We also provide a number of new upper bounds on the complexity of parallel prefix circuits under various restrictions, and better (than general) upper bounds on the complexity of prefix XOR-circuits, e.g. <font face="serif">(36/11&#8211;<i>o</i>(1))<i>m</i></font> for width <font face="serif"><i>m</i></font> and minimal depth.
 
  <br> <i>Conference version</i>: in Proc. sDMA'10 (Moscow, 2010).
- 
+
  <br> &#8984 The case of bounded-by-2-fanout prefix circuits is examined in more detail in [<a href="#p43">43</a>].
 </div>
 
