--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ for small <font face="serif"><i>k</i></font>'s.
 
 <div class="cite">
 <font color="300080">[42]</font> Sergeev I. S. <i><font color="300080"> On the additive complexity of some number sequences.</font></i>
-(submitted to <i>Matematicheskie Zametki</i>)
+Matematicheskie Zametki (Mathematical Notes).  2024. <b>115</b>(3), 408-421. <a href="https://doi.org/10.4213/mzm13984">DOI</a> (in Russian)
 </div>
 
 <div class="comm">
