--- a/index.html
+++ b/index.html
@@ -202,8 +202,11 @@ for small <font face="serif"><i>k</i></font>'s.
 <p> <a name="p42"></a> </p>
 
 <div class="cite">
-<font color="300080">[42]</font> Sergeev I. S. <i><font color="300080"> On the additive complexity of some number sequences.</font></i>
-Matematicheskie Zametki (Mathematical Notes).  2024. <b>115</b>(3), 408-421. <a href="https://doi.org/10.4213/mzm13984">DOI</a> (in Russian)
+<font color="300080">[42]</font> Sergeev I. S. <i><font color="300080"> On the additive complexity of some integer sequences.</font></i>
+    Mathematical Notes. 2024. <b>115</b>(3), 378-389.
+    <a href="https://doi.org/10.1134/S0001434624030106">DOI</a> (translation of the
+    <a href="https://www.mathnet.ru/php/archive.phtml?wshow=paper&jrnid=mzm&paperid=13984&option_lang=eng">paper</a> from <i>
+Matematicheskie Zametki</i>)
 </div>
 
 <div class="comm">
