--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@ PDF is available on the <a href="https://keldysh.ru/mvk/index.php?id=vypusk-20">
 </div>
 
 <div class="comm">
- &#9672 We propose a new exposition of a (modified) multilevel representation synthesis method invented by E. I. Nechiporik (1962) and provide an alternative proof for the asymptotic Shannon complexity of AC-circuits with free negations, an also some bounds for the bounded-depth version of the problem. A supplementary result to [<a href="#p30">30</a>].
+ &#9672 We propose a new exposition of a (modified) multilevel representation synthesis method invented by E. I. Nechiporik (1962) and provide an alternative proof for the asymptotic Shannon complexity of AC-circuits with free negations, and also some bounds for the bounded-depth version of the problem. A supplementary result to [<a href="#p30">30</a>].
 </div>
 
 <p> <a name="p35"></a></p>
