--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ The list of my scientific papers is also available at
 <p> <a name="p43"></a> </p>
 
 <div class="cite">
-<font color="300080">[43]</font> Sergeev I. S. <i><font color="300080"> On the complexity of bounded-fanout parallel prefix circuits.</font></i>
+<font color="300080">[43]</font> Sergeev I. S. <i><font color="300080"> On the complexity of fanout-bounded parallel prefix circuits.</font></i>
 (submitted to <i>Diskretnyi Analiz i Issledovanie Operatsii</i>)
 </div>
 
