--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@ algorithms etc.).
 
 The list of my scientific papers is also available at
 <a href="https://scholar.google.com/citations?user=iIsjHwEAAAAJ&hl=en">Google Scholar</a>,
-<a href="https://www.researchgate.net/profile/I-Sergeev-3/research">Researchgate</a>,
+<a href="https://www.researchgate.net/profile/I-Sergeev-3/research">Researchgate</a> (all English papers except very recent),
 <a href="https://www.mathnet.ru/php/person.phtml?&personid=27771&option_lang=eng">Mathnet</a>,
-<a href="https://istina.msu.ru/profile/isserg/">Istina</a>
+<a href="https://istina.msu.ru/profile/isserg/">Istina</a> (all Russian papers except very recent)
 
 <p> My permanent <b>coauthors</b> (more than one paper):
    <a href="https://www.mathnet.ru/php/person.phtml?&personid=20457&option_lang=eng">Sergey B. Gashkov</a> (scientific advisor),
@@ -940,6 +940,8 @@ Matematicheskie Zametki</i>)
 
 <div class="comm">
  &#9672 E. Kaltofen and V. Shoup (1998) for the problem of transition between the polynomial and normal representations of finite fields <font face="serif"><i>GF</i>(<i>q<sup>n</sup></i>)</font> proposed arithmetic circuits of subquadratic complexity <font face="serif"><i>O</i>(<i>n</i><sup>1.82</sup>)</font> over <font face="serif"><i>GF</i>(<i>q</i>)</font>. However, their polynomial-to-normal algorithm is probabilistic. We propose a pair of deterministic and seemingly simpler algorithms of similar complexity <font face="serif"><i>O</i>(<i>n</i><sup>1.81</sup>)</font> (slightly improved due to the progress in rectangular matrix multiplication).
+ 
+ <br> <i>Comment</i>: It's my first genuinely self-written journal paper. Thus, it suffers from an insufficiently informative abstract and introduction, and a lack of notions.
 
  <br> <i>Conference version</i>: in Proc. SCCS'16 (Saint Petersburg, 2006).
 
