--- a/index.html
+++ b/index.html
@@ -183,6 +183,30 @@ The list of my scientific papers is also available at
 </p>
 
 
+<p> <a name="p44"></a> </p>
+
+<div class="cite">
+<font color="300080">[44]</font> Sergeev I. S. <i><font color="300080"> Lower bounds on the additive
+complexity of linear operators and bilinear algorithms for matrix and polynomial multiplication over <font face="serif">GF(2)</font>.</font></i>
+(submitted to <i>Matematicheskie Zametki</i>)
+</div>
+
+<div class="comm">
+&#9672 We establish a lower bound <font face="serif">5<i>n</i>&#8211;<i>o</i>(<i>n</i>)</font> on the
+complexity of an explicit boolean <font face="serif"><i>n</i>&times<i>n</i></font> matrix 
+with respect to implementation by additive circuits over <font face="serif"><i>GF</i>(2)</font>. 
+It seems that only <font face="serif">3<i>n</i>&#8211;<i>o</i>(<i>n</i>)</font> bounds were previously known. 
+Also we obtain complexity lower bounds <font face="serif">3<i>n</i>&#8211;<i>o</i>(<i>n</i>)</font> 
+for an explicit <font face="serif"><i>n</i>&times<i>n</i></font> circulant matrix, and for the Sierpinsky matrix of the same size.
+Along the way, we prove lower bounds on the additive complexity of bilinear algorithms:
+<font face="serif">(4&#8211;<i>o</i>(1))<i>n</i><sup>2</sup></font> 
+for multiplication of <font face="serif"><i>n</i>&times<i>n</i></font> matrices, 
+<font face="serif">5<i>n</i>&#8211;<i>o</i>(<i>n</i>)</font> for
+multiplication of degree <font face="serif"><i>n</i>&#8211;1</font> polynomials, 
+and <font face="serif">4<i>n</i>&#8211;<i>o</i>(<i>n</i>)</font> for the cyclic
+convolution of order <font face="serif"><i>n</i></font> over <font face="serif"><i>GF</i>(2)</font>.
+</div>
+
 <p> <a name="p43"></a> </p>
 
 <div class="cite">
@@ -939,14 +963,14 @@ Matematicheskie Zametki</i>)
 </div>
 
 <div class="comm">
- &#9672 E. Kaltofen and V. Shoup (1998) for the problem of transition between the polynomial and normal representations of finite fields <font face="serif"><i>GF</i>(<i>q<sup>n</sup></i>)</font> proposed arithmetic circuits of subquadratic complexity <font face="serif"><i>O</i>(<i>n</i><sup>1.82</sup>)</font> over <font face="serif"><i>GF</i>(<i>q</i>)</font>. However, their polynomial-to-normal algorithm is probabilistic. We propose a pair of deterministic and seemingly simpler algorithms of similar complexity <font face="serif"><i>O</i>(<i>n</i><sup>1.81</sup>)</font> (slightly improved due to the progress in rectangular matrix multiplication).
+ &#9672 E. Kaltofen and V. Shoup (1998) for the problem of transition between the polynomial and normal representations of finite fields <font face="serif"><i>GF</i>(<i>q<sup>n</sup></i>)</font> proposed arithmetic circuits of subquadratic complexity <font face="serif"><i>O</i>(<i>n</i><sup>1.82</sup>)</font> over <font face="serif"><i>GF</i>(<i>q</i>)</font>. However, their polynomial-to-normal algorithm is probabilistic. We propose a pair of deterministic and seemingly simpler algorithms of similar complexity <font face="serif"><i>O</i>(<i>n</i><sup>1.81</sup>)</font> (the exponent was slightly improved due to the progress in rectangular matrix multiplication). Better algorithms are proposed for normal bases of the so-called low multiplication complexity. We also obtain corollaries for the problems of computing Frobenius automorphisms and checking the linear independence of a normal system.  
  
  <br> <i>Comment</i>: It's my first genuinely self-written journal paper. Thus, it suffers from an insufficiently informative abstract and introduction, and a lack of notions.
 
  <br> <i>Conference version</i>: in Proc. SCCS'16 (Saint Petersburg, 2006).
 
   <br> &#8984 C. Umans (<a href="https://doi.org/10.1145/1374376.1374445">2008</a>) showed that the modular composition of degree-<font face="serif"><i>n</i></font> polynomials over the fields of characteristic
-  <font face="serif"><i>n</i><sup><i>o</i>(1)</sup></font> has almost linear complexity <font face="serif"><i>n</i><sup>1+<i>o</i>(1)</sup></font>. This result lowers the complexity of the algorithms for transitions in the fields of small characteristic to <font face="serif"><i>O</i>(<i>n</i><sup>1.63</sup>)</font> given the present-day (2023) bounds for rectangular matrix multiplication.
+  <font face="serif"><i>n</i><sup><i>o</i>(1)</sup></font> has almost linear complexity <font face="serif"><i>n</i><sup>1+<i>o</i>(1)</sup></font>. This result lowers the complexity of the algorithms for transitions in the fields of small characteristic to <font face="serif"><i>O</i>(<i>n</i><sup>1.63</sup>)</font> given the present-day (2023) bounds for the rectangular matrix multiplication.
 </div>
 
 <p> <a name="c2"></a></p>
