--- a/index.html
+++ b/index.html
@@ -159,6 +159,23 @@ algorithms etc.).
 </table>
 
 
+<table cols="2" cellspacing="25">
+        <tbody>
+                <tr>
+                    <td>
+                        <img src="./pics/Slection.jpg" width="150">
+                    </td>
+                    <td>
+                        Igor S. Sergeev
+                        <h4> Complexity of sorting and selection. Materials for lectures </h4>
+                        A draft of the book that can serve as a course of lectures on the complexity of the classical sorting and selection problems (in Russian). Along with a standard material, it contains proofs of some recent non-trivial results like a uniform complexity bound for the sorting of a poset, an asymptotically optimal multiselection algorithm, a lower bound on the complexity of comparator networks for sorting, etc.
+                        <p> </p>
+                        <a href="./papers/S-lections_161024.pdf">Current version</a> (dated by 16.10.2024) <a href="http://dx.doi.org/10.13140/RG.2.2.28850.41927">DOI</a>
+                   </td>
+                </tr>
+       </tbody>
+</table>
+
 
 
 <h3>
@@ -193,16 +210,16 @@ complexity of linear operators and bilinear algorithms for matrix and polynomial
 
 <div class="comm">
 &#9672 We establish a lower bound <font face="serif">5<i>n</i>&#8211;<i>o</i>(<i>n</i>)</font> on the
-complexity of an explicit boolean <font face="serif"><i>n</i>&times<i>n</i></font> matrix 
-with respect to implementation by additive circuits over <font face="serif"><i>GF</i>(2)</font>. 
-It seems that only <font face="serif">3<i>n</i>&#8211;<i>o</i>(<i>n</i>)</font> bounds were previously known. 
-Also we obtain complexity lower bounds <font face="serif">3<i>n</i>&#8211;<i>o</i>(<i>n</i>)</font> 
+complexity of an explicit boolean <font face="serif"><i>n</i>&times<i>n</i></font> matrix
+with respect to implementation by additive circuits over <font face="serif"><i>GF</i>(2)</font>.
+It seems that only <font face="serif">3<i>n</i>&#8211;<i>o</i>(<i>n</i>)</font> bounds were previously known.
+Also we obtain complexity lower bounds <font face="serif">3<i>n</i>&#8211;<i>o</i>(<i>n</i>)</font>
 for an explicit <font face="serif"><i>n</i>&times<i>n</i></font> circulant matrix, and for the Sierpinsky matrix of the same size.
 Along the way, we prove lower bounds on the additive complexity of bilinear algorithms:
-<font face="serif">(4&#8211;<i>o</i>(1))<i>n</i><sup>2</sup></font> 
-for multiplication of <font face="serif"><i>n</i>&times<i>n</i></font> matrices, 
+<font face="serif">(4&#8211;<i>o</i>(1))<i>n</i><sup>2</sup></font>
+for multiplication of <font face="serif"><i>n</i>&times<i>n</i></font> matrices,
 <font face="serif">5<i>n</i>&#8211;<i>o</i>(<i>n</i>)</font> for
-multiplication of degree <font face="serif"><i>n</i>&#8211;1</font> polynomials, 
+multiplication of degree <font face="serif"><i>n</i>&#8211;1</font> polynomials,
 and <font face="serif">4<i>n</i>&#8211;<i>o</i>(<i>n</i>)</font> for the cyclic
 convolution of order <font face="serif"><i>n</i></font> over <font face="serif"><i>GF</i>(2)</font>.
 </div>
@@ -963,8 +980,8 @@ Matematicheskie Zametki</i>)
 </div>
 
 <div class="comm">
- &#9672 E. Kaltofen and V. Shoup (1998) for the problem of transition between the polynomial and normal representations of finite fields <font face="serif"><i>GF</i>(<i>q<sup>n</sup></i>)</font> proposed arithmetic circuits of subquadratic complexity <font face="serif"><i>O</i>(<i>n</i><sup>1.82</sup>)</font> over <font face="serif"><i>GF</i>(<i>q</i>)</font>. However, their polynomial-to-normal algorithm is probabilistic. We propose a pair of deterministic and seemingly simpler algorithms of similar complexity <font face="serif"><i>O</i>(<i>n</i><sup>1.81</sup>)</font> (the exponent was slightly improved due to the progress in rectangular matrix multiplication). Better algorithms are proposed for normal bases of the so-called low multiplication complexity. We also obtain corollaries for the problems of computing Frobenius automorphisms and checking the linear independence of a normal system.  
- 
+ &#9672 E. Kaltofen and V. Shoup (1998) for the problem of transition between the polynomial and normal representations of finite fields <font face="serif"><i>GF</i>(<i>q<sup>n</sup></i>)</font> proposed arithmetic circuits of subquadratic complexity <font face="serif"><i>O</i>(<i>n</i><sup>1.82</sup>)</font> over <font face="serif"><i>GF</i>(<i>q</i>)</font>. However, their polynomial-to-normal algorithm is probabilistic. We propose a pair of deterministic and seemingly simpler algorithms of similar complexity <font face="serif"><i>O</i>(<i>n</i><sup>1.81</sup>)</font> (the exponent was slightly improved due to the progress in rectangular matrix multiplication). Better algorithms are proposed for normal bases of the so-called low multiplication complexity. We also obtain corollaries for the problems of computing Frobenius automorphisms and checking the linear independence of a normal system.
+
  <br> <i>Comment</i>: It's my first genuinely self-written journal paper. Thus, it suffers from an insufficiently informative abstract and introduction, and a lack of notions.
 
  <br> <i>Conference version</i>: in Proc. SCCS'16 (Saint Petersburg, 2006).
@@ -1111,7 +1128,7 @@ Sergeev I. S. <i><font color="006030"> Complexity of symmetric boolean functions
         Lections  <a name="lect"></a>
 </h3>
 
-Gashkov S. B., Sergeev I. S. <i><font color="006030"> Complexity of computations.</font></i> (MSU, 2011/2012). partially written (in Russian)
+Gashkov S. B., Sergeev I. S. <i><font color="006030"> Complexity of computations.</font></i> (MSU, 2011/2012). old and partially written (in Russian)
 
 <table cols="3">
         <tbody>
