--- a/index.html
+++ b/index.html
@@ -516,11 +516,10 @@ Problemy Peredachi Informatsii</i>)
 </div>
 
 <div class="comm">
- &#9672 E. I. Nechiporuk (1963) showed that the asymptotic linear complexity of the class of boolean <font face="serif">(<i>m, n</i>)</font>-matrices is <font face="serif"><i>mn</i>/log<sub>2</sub>(<i>mn</i>)</font>, and it is achieved in depth <font face="serif">3</font>
+ &#9672 E. I. Nechiporuk (1963) showed that the asymptotic linear complexity <font face="serif"><i>mn</i>/log<sub>2</sub>(<i>mn</i>)</font> of the class of boolean <font face="serif">(<i>m, n</i>)</font>-matrices is achieved in depth <font face="serif">3</font>
 for various ratios between <font face="serif"><i>m</i></font> and <font face="serif"><i>n</i></font>. N. Pippenger (1979) proved that the asymptotic holds for all <font face="serif"><i>m</i></font>, <font face="serif"><i>n</i></font>, except of some extremely unbalanced cases. We show that in the general case, the asymptotic is achieved by depth-<font face="serif">3</font> circuits, and this result is final. Also, we slightly improve Pippenger's upper bounds on the linear complexity of classes of integer <font face="serif">(<i>m, n</i>)</font>-matrices with bounded by <font face="serif"><i>q</i></font> coefficients from
 <font face="serif"><i>A</i> + <i>O</i>(<i>n</i>)</font> to <font face="serif"><i>A</i> + <i>n</i></font>, where
 <font face="serif"><i>A</i> = 3<i>m</i>log<sub>3</sub><i>q</i> + (1+<i>o</i>(1))<i>H</i>/log<sub>2</sub><i>H</i></font>, and <font face="serif"><i>H</i> = <i>mn</i>log<sub>2</sub><i>q</i></font>, assuming <font face="serif"><i>m</i> &#8804 <i>n</i></font>, and it is tight.
-
 </div>
 
 <p> <a name="p28"></a></p>
@@ -586,7 +585,7 @@ Matematicheskie Zametki</i>)
 </div>
 
 <div class="comm">
- &#9672 Exploiting L. G. Valiant's idea of approximate computation of threshold symmetric functions, we further improve upper bounds [<a href="#p21">21</a>, <a href="#p22">22</a>] on the depth and complexity of general symmetric boolean functions, and, separately, of counting and threshold functions. As a consequence, we obtain new record asymptotic bounds for the depth of multiplication of <font face="serif"><i>n</i></font>-bit numbers: <font face="serif">4.02 log<sub>2</sub><i>n</i></font> in the full binary boolean basis, and <font face="serif">5.14 log<sub>2</sub><i>n</i></font> in the standard boolean basis <font face="serif">{&#8744, &#8743, &#175}</font>. New bounds are nonconstructive.
+ &#9672 Exploiting L. G. Valiant's idea of approximate computation of threshold symmetric functions, we further improve upper bounds [<a href="#p21">21</a>, <a href="#p22">22</a>] on the depth and complexity of general symmetric boolean functions, and, particularly, of counting and threshold functions. As a consequence, we obtain new record asymptotic bounds for the depth of multiplication of <font face="serif"><i>n</i></font>-bit numbers: <font face="serif">4.02 log<sub>2</sub><i>n</i></font> in the full binary boolean basis, and <font face="serif">5.14 log<sub>2</sub><i>n</i></font> in the standard boolean basis <font face="serif">{&#8744, &#8743, &#175}</font>. New bounds are nonconstructive.
 </div>
 
 <p> <a name="p24"></a></p>
@@ -599,7 +598,8 @@ Matematicheskie Zametki</i>)
 </div>
 
 <div class="comm">
- &#9672 M. Farah-Colton and M.-T. Tsai (2015) proved that the complexity of computing the table of primes between <font face="serif">1</font> and <font face="serif"><i>n</i></font> on a multitape Turing machine is <font face="serif"><i>O</i>(<i>n</i> log<sup>2</sup> <i>n</i> /log log <i>n</i>)</font>. We improve this bound to <font face="serif"><i>O</i>(<i>n </i>log <i>n</i>)</font>.
+ &#9672 M. Farah-Colton and M.-T. Tsai (2015) proved that the complexity of computing the table of primes between <font face="serif">1</font> and <font face="serif"><i>n</i></font> on a multitape Turing machine is <font face="serif"><i>O</i>(<i>n</i> log<sup>2</sup> <i>n</i> /log log <i>n</i>)</font>. We improve this bound to <font face="serif"><i>O</i>(<i>n </i>log <i>n</i>)</font>. Note that the complexity of computing
+the table of composite numbers below <font face="serif"><i>n</i></font> is <font face="serif"><i>&#920</i>(<i>n </i>log <i>n</i>)</font>.
  </div>
 
 <p> <a name="e7"></a>  </p>
@@ -706,7 +706,7 @@ Matematicheskie Zametki</i>)
 </div>
 
 <div class="comm">
- &#9672 U. Zwick (1996) observed a simple relation between the multiplicative and the total monotone complexity of boolean functions, that is tight up to the order of magnitude. We prove a similar but asymptotically tight relation for boolean circuits over Zhegalkin basis, that is, arithmetic circuits over <font face="serif"><i>GF</i>(2)</font>. It follows from an old result by E. I. Nechiporuk.
+ &#9672 U. Zwick (1996) observed a simple relation between the multiplicative and the total monotone complexity of boolean functions, that is tight up to the order of magnitude. We prove a similar but asymptotically tight relation for boolean circuits over Zhegalkin basis, that is, arithmetic circuits over <font face="serif"><i>GF</i>(2)</font>. It follows from an old result by E. I. Nechiporuk (1962).
  </div>
 
 <p> <a name="p19"></a></p>
@@ -980,7 +980,7 @@ Matematicheskie Zametki</i>)
 </div>
 
 <div class="comm">
- &#9672 E. Kaltofen and V. Shoup (1998) for the problem of transition between the polynomial and normal representations of finite fields <font face="serif"><i>GF</i>(<i>q<sup>n</sup></i>)</font> proposed arithmetic circuits of subquadratic complexity <font face="serif"><i>O</i>(<i>n</i><sup>1.82</sup>)</font> over <font face="serif"><i>GF</i>(<i>q</i>)</font>. However, their polynomial-to-normal algorithm is probabilistic. We propose a pair of deterministic and seemingly simpler algorithms of similar complexity <font face="serif"><i>O</i>(<i>n</i><sup>1.81</sup>)</font> (the exponent was slightly improved due to the progress in rectangular matrix multiplication). Better algorithms are proposed for normal bases of the so-called low multiplication complexity. We also obtain corollaries for the problems of computing Frobenius automorphisms and checking the linear independence of a normal system.
+ &#9672 E. Kaltofen and V. Shoup (1998) for the problem of transition between the polynomial and normal representations of finite fields <font face="serif"><i>GF</i>(<i>q<sup>n</sup></i>)</font> proposed arithmetic circuits of subquadratic complexity <font face="serif"><i>O</i>(<i>n</i><sup>1.82</sup>)</font> over <font face="serif"><i>GF</i>(<i>q</i>)</font>. However, their polynomial-to-normal algorithm is probabilistic. We propose a pair of deterministic and seemingly simpler algorithms of similar complexity <font face="serif"><i>O</i>(<i>n</i><sup>1.81</sup>)</font> (the exponent was slightly improved due to the progress in the rectangular matrix multiplication). Better algorithms are proposed for normal bases of the so-called low multiplication complexity. We also obtain corollaries for the problems of computing Frobenius automorphisms and checking the linear independence of a normal system.
 
  <br> <i>Comment</i>: It's my first genuinely self-written journal paper. Thus, it suffers from an insufficiently informative abstract and introduction, and a lack of notions.
 
@@ -1125,65 +1125,11 @@ Sergeev I. S. <i><font color="006030"> Complexity of symmetric boolean functions
 
 
 <h3>
-        Lections  <a name="lect"></a>
+        Lecture notes  <a name="lect"></a>
 </h3>
 
-Gashkov S. B., Sergeev I. S. <i><font color="006030"> Complexity of computations.</font></i> (MSU, 2011/2012). old and partially written (in Russian)
-
-<table cols="3">
-        <tbody>
-                <tr>
-                        <td>  </td>
-                        <td> <a href="./papers/programCC2012.pdf">program</a> </td>
-                        <td>  </td>
-                </tr>
-                <tr>
-                        <td> 1 </td>
-                        <td> Addition chains </td>
-                        <td> <a href="./papers/lection1.pdf">pdf</a> </td>
-                </tr>
-               <tr>
-                        <td> 2 </td>
-                        <td> Adders </td>
-                        <td> <a href="./papers/lection2.pdf">pdf</a> </td>
-                </tr>
-               <tr>
-                        <td> 3 </td>
-                        <td> Discrete Fourier transform </td>
-                        <td> <a href="./papers/lection3.pdf">pdf</a> </td>
-                </tr>
-               <tr>
-                        <td> 4.1-2 </td>
-                        <td> Multiplication of numbers </td>
-                        <td> <a href="./papers/lection4.pdf">pdf</a> </td>
-                </tr>
-               <tr>
-                        <td> 4.3 </td>
-                        <td> F&#252rer's method </td>
-                        <td> <a href="./papers/lection4f.pdf">pdf</a> </td>
-                </tr>
-               <tr>
-                        <td> 5 </td>
-                        <td> Division of numbers and polynomials </td>
-                        <td> <a href="./papers/lection5.pdf">pdf</a> </td>
-                </tr>
-               <tr>
-                        <td> 6.2 </td>
-                        <td> Logarithm and exponential </td>
-                        <td> <a href="./papers/lection6e.pdf">pdf</a> </td>
-                </tr>
-               <tr>
-                        <td> 7 </td>
-                        <td> GCD of polynomials </td>
-                        <td> <a href="./papers/lection7.pdf">pdf</a> </td>
-                </tr>
-               <tr>
-                        <td> 8 </td>
-                        <td> Factorial </td>
-                        <td> <a href="./papers/lection8.pdf">pdf</a> </td>
-                </tr>
-       </tbody>
-</table>
+Gashkov S. B., Sergeev I. S. <i><font color="006030"> Complexity of computations.</font></i> (MSU, 2011/2012). old and partially written. 
+<a href="./papers/CC-lectures.pdf">PDF</a> (in Russian)
 
 <hr>
 
