--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ complexity of an explicit boolean <font face="serif"><i>n</i>&times<i>n</i></fon
 with respect to implementation by additive circuits over <font face="serif"><i>GF</i>(2)</font>.
 It seems that only <font face="serif">3<i>n</i>&#8211;<i>o</i>(<i>n</i>)</font> bounds were previously known.
 Also we obtain complexity lower bounds <font face="serif">3<i>n</i>&#8211;<i>o</i>(<i>n</i>)</font>
-for an explicit <font face="serif"><i>n</i>&times<i>n</i></font> circulant matrix, and for the Sierpinsky matrix of the same size.
+for an explicit <font face="serif"><i>n</i>&times<i>n</i></font> circulant matrix, and for the Sierpi&#324;ski matrix of the same size.
 Along the way, we prove lower bounds on the additive complexity of bilinear algorithms:
 <font face="serif">(4&#8211;<i>o</i>(1))<i>n</i><sup>2</sup></font>
 for multiplication of <font face="serif"><i>n</i>&times<i>n</i></font> matrices,
@@ -291,7 +291,7 @@ Matematicheskie Zametki</i>)
 </div>
 
 <div class="comm">
- &#9672 J. Alman, Y. Guan, A. Padaki (2022) proposed a new method for constructing low-complexity coverings of Kronecker powers of matrices and improved an upper bound on the depth-<font face="serif">2</font> additive complexity of the Sierpinsky (disjointness) matrix stated in the <a href="#book">book</a>. We provide an alternative proof for the case of symmetric matrices in a stronger form. This allows to further improve the above upper bound.
+ &#9672 J. Alman, Y. Guan, A. Padaki (2022) proposed a new method for constructing low-complexity coverings of Kronecker powers of matrices and improved an upper bound on the depth-<font face="serif">2</font> additive complexity of the Sierpi&#324;ski (disjointness) matrix stated in the <a href="#book">book</a>. We provide an alternative proof for the case of symmetric matrices in a stronger form. This allows to further improve the above upper bound.
 </div>
 
 <p> <a name="p40"></a> </p>
@@ -635,7 +635,7 @@ the table of composite numbers below <font face="serif"><i>n</i></font> is <font
     <a href="https://doi.org/10.1016/j.ipl.2013.12.003">DOI</a> </div>
 
 <div class="comm">
- &#9672 We prove accurate upper complexity bounds on the complexity of submatrices of the Sierpinski (disjointness) matrix improving preliminary results by the authors (including [<a href="#e3">e3</a>]) and provide some applications.
+ &#9672 We prove accurate upper complexity bounds on the complexity of submatrices of the Sierpi&#324;ski (disjointness) matrix improving preliminary results by the authors (including [<a href="#e3">e3</a>]) and provide some applications.
 </div>
 
 <p> <a name="p22"></a></p>
@@ -768,7 +768,7 @@ the table of composite numbers below <font face="serif"><i>n</i></font> is <font
 </div>
 
 <div class="comm">
- &#9672 P. Kaski, M. Koivisto and J. H. Korhonen (2012) obtained some upper bounds on the additive complexity of submatrices of the Sierpinski (disjointness) matrix. We improve these bounds and also prove a lower counterpart.
+ &#9672 P. Kaski, M. Koivisto and J. H. Korhonen (2012) obtained some upper bounds on the additive complexity of submatrices of the Sierpi&#324;ski (disjointness) matrix. We improve these bounds and also prove a lower counterpart.
 
 <br> &#8984 In the joint paper [<a href="#p23">23</a>], we obtained even better complexity upper bounds.
  </div>
@@ -1128,7 +1128,7 @@ Sergeev I. S. <i><font color="006030"> Complexity of symmetric boolean functions
         Lecture notes  <a name="lect"></a>
 </h3>
 
-Gashkov S. B., Sergeev I. S. <i><font color="006030"> Complexity of computations.</font></i> (MSU, 2011/2012). old and partially written. 
+Gashkov S. B., Sergeev I. S. <i><font color="006030"> Complexity of computations.</font></i> (MSU, 2011/2012). old and partially written.
 <a href="./papers/CC-lectures.pdf">PDF</a> (in Russian)
 
 <hr>
