--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ algorithms etc.).
                     </td>
                     <td>
                         Igor S. Sergeev
-                        <h4> Etudes on the methods of fast circuit synthesis </h4>
+                        <h4> Etudes on the methods of designing efficient circuits </h4>
                         I've prepared a draft of the book illustrating ideas behind the
                         methods of synthesis of fast circuits (in Russian).
                         <p> </p>
