--- a/index.html
+++ b/index.html
@@ -1095,32 +1095,107 @@ doctoral dissertation (Dr.Habil): <i><font color="300080">Some problems of synth
 <a href="./papers/diss2021.pdf">PDF</a> (in Russian) <a href="https://istina.msu.ru/dissertations/378944357">web-page</a>
 </div>
 
+
+
 <h3>
-        Plenary talks  <a name="talks"></a>
+        Presentations  <a name="talks"></a>
 </h3>
 
+
 <div class="cite">
-Gashkov S. B., Sergeev I. S. <i><font color="006030"> Algorithms for the fast Fourier transform.</font></i> yDMA'7 (Moscow, 2009).  see [<a href="#p10">10</a>]
+Sergeev I. S. <i><font color="006030"> Lower bounds on the additive complexity of linear operators over <font face="serif">GF(2)</font>.</font></i>  <a href="./papers/lowerlin2024eng.pdf">PDF</a>
 </div>
+
+<div class="comm">
+Report: seminar MVK - &#8220Mathematical problems of cybernetics&#8221 (Moscow State University, 2024)
+</div>
+
+<div class="comm">
+ &#9672 An illustrated exposition of results from [<a href="#p44">44</a>].
+</div>
+
 
 <p> </p>
 <div class="cite">
-Gashkov S. B., Sergeev I. S. <i><font color="006030"> Complexity of computation of polynomials.</font></i> PTK'16 (Nizhny Novgorod, 2011).  <a href="./papers/slides2011.pdf">slides</a> (in Russian)
+Sergeev I. S. <i><font color="006030"> Complexity of symmetric boolean functions.</font></i>  <a href="./papers/symmcomp2023eng.pdf">PDF</a>
 </div>
+
+<div class="comm">
+Plenary talk: DMTCS'11 conference (Moscow, 2023). original <a href="./papers/slides2023.pdf">slides</a> (in Russian)
+</div>
+
+<div class="comm">
+ &#9672 A survey of known bounds on the complexity of computation of symmetric boolean functions by boolean circuits, formulae, switching circuits, including a brief exposition of some methods.
+</div>
+
 
 <p> </p>
 <div class="cite">
-Gashkov S. B., Sergeev I. S. <i><font color="006030"> On the arithmetic complexity of some linear mappings.</font></i> <a href="https://www.mathnet.ru/php/conference.phtml?confid=773&option_lang=eng">NTA'3</a> (Moscow, 2016).  <a href="./papers/slides2016.pdf">slides</a>
+Sergeev I. S. <i><font color="006030"> Complexity of boolean linear operators.</font></i>  <a href="./papers/linoper2021eng.pdf">PDF</a>
 </div>
+
+<div class="comm">
+Plenary talk: PTK'19 conference (online, 2021). original <a href="./papers/slides2021.pdf">slides</a> (in Russian)
+</div>
+
+<div class="comm">
+ &#9672 An illustrated survey of results on the complexity of boolean linear circuits. Closely follows the contents of our <a href="#book">book</a>, also including some recent results.
+</div>
+
 
 <p> </p>
 <div class="cite">
-Sergeev I. S. <i><font color="006030"> Complexity of boolean linear operators.</font></i> PTK'19 (online, 2021).  <a href="./papers/slides2021.pdf">slides</a> (in Russian)
+Sergeev I. S. <i><font color="006030"> Khrapchenko method for <font face="serif">k</font>-ary bases.</font></i>  <a href="./papers/khr2021eng.pdf">PDF</a>
 </div>
+
+<div class="comm">
+Report: seminar MVK - &#8220Mathematical problems of cybernetics&#8221 (Moscow State University, 2021)
+</div>
+
+<div class="comm">
+ &#9672 A brief exposition of results from [<a href="#p39">39</a>].
+</div>
+
 
 <p> </p>
 <div class="cite">
-Sergeev I. S. <i><font color="006030"> Complexity of symmetric boolean functions.</font></i> DMTCS'11 (Moscow, 2023).  <a href="./papers/slides2023.pdf">slides</a> (in Russian)
+Sergeev I. S. <i><font color="006030"> Arithmetic of Fibonacci representations.</font></i>  <a href="./papers/fibo2021eng.pdf">PDF</a>
+</div>
+
+<div class="comm">
+Report: seminar MVK - &#8220Mathematical problems of cybernetics&#8221 (Moscow State University, 2021)
+</div>
+
+<div class="comm">
+ &#9672 A brief exposition of results from [<a href="#p31">31</a>] and slightly beyond.
+</div>
+
+
+<p> </p>
+<div class="cite">
+Gashkov S. B., Sergeev I. S. <i><font color="006030"> On the arithmetic complexity of some linear mappings.</font></i>  <a href="./papers/slides2016.pdf">PDF</a>
+</div>
+
+<div class="comm">
+Plenary talk: <a href="https://www.mathnet.ru/php/conference.phtml?confid=773&option_lang=eng">NTA'3</a> conference (Moscow, 2016)
+</div>
+
+<div class="comm">
+ &#9672 A survey of results on the complexity of some linear mappings with respect to implementation by boolean and arithmetic linear circuits.
+</div>
+
+
+<p> </p>
+<div class="cite">
+Gashkov S. B., Sergeev I. S. <i><font color="006030"> Complexity of computation of polynomials.</font></i>  <a href="./papers/polycomp2011eng.pdf">PDF</a>
+</div>
+
+<div class="comm">
+Plenary talk: PTK'16 conference (Nizhny Novgorod, 2011). original <a href="./papers/slides2011.pdf">slides</a> (in Russian)
+</div>
+
+<div class="comm">
+ &#9672 A survey of some results on the complexity of arithmetic circuits for polynomials, with an emphasis on the results from [<a href="#p17">17</a>].
 </div>
 
 
