--- a/index.html
+++ b/index.html
@@ -1145,6 +1145,20 @@ Plenary talk: PTK'19 conference (online, 2021). original <a href="./papers/slide
 
 <p> </p>
 <div class="cite">
+Sergeev I. S. <i><font color="006030"> Algebraic method in the theory of synthesis.</font></i>  <a href="./papers/alg2021eng.pdf">PDF</a>
+</div>
+
+<div class="comm">
+Report: Research seminar on algebra (Moscow State University, 2021)
+</div>
+
+<div class="comm">
+ &#9672 A collection of examples of how the algebraic method (i.e. transition between algebraic structures) reduces the complexity of computations.
+</div>
+
+
+<p> </p>
+<div class="cite">
 Sergeev I. S. <i><font color="006030"> Khrapchenko method for <font face="serif">k</font>-ary bases.</font></i>  <a href="./papers/khr2021eng.pdf">PDF</a>
 </div>
 
