--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ The list of my scientific papers is also available at
 <div class="cite">
 <font color="300080">[44]</font> Sergeev I. S. <i><font color="300080"> Lower bounds on the additive
 complexity of linear operators and bilinear algorithms for matrix and polynomial multiplication over <font face="serif">GF(2)</font>.</font></i>
-(submitted to <i>Matematicheskie Zametki</i>)
+(submitted to <i>Matematicheskie Zametki</i>) <a href="./papers/lowerlin2024eng.pdf">slides</a>
 </div>
 
 <div class="comm">
@@ -1182,6 +1182,20 @@ Report: seminar MVK - &#8220Mathematical problems of cybernetics&#8221 (Moscow S
 
 <div class="comm">
  &#9672 A brief exposition of results from [<a href="#p31">31</a>] and slightly beyond.
+</div>
+
+
+<p> </p>
+<div class="cite">
+Sergeev I. S. <i><font color="006030"> Complexity of additive computations.</font></i>  <a href="./papers/addcomp2021eng.pdf">PDF</a>
+</div>
+
+<div class="comm">
+Report: Research seminar on number theory (Moscow State University, 2021)
+</div>
+
+<div class="comm">
+ &#9672 A survey of some results on the complexity of additive circuits over boolean, integer and real/complex domains.
 </div>
 
 
