--- a/index.html
+++ b/index.html
@@ -1084,14 +1084,14 @@ the table of composite numbers below <font face="serif"><i>n</i></font> is <font
 </h3>
 
 <div class="cite">
-candidate dissertation (Ph.D): <i><font color="300080">On implementation of some operations in finite fields by logarithmic depth circuits.</font></i> MSU, 2007.
+candidate dissertation (Ph.D): <i><font color="300080">On the implementation of some operations in finite fields by the logarithmic depth circuits.</font></i> MSU, 2007.
 <a href="./papers/diss2007.pdf">PDF</a> (in Russian)
 </div>
 
 <p>  </p>
 
 <div class="cite">
-doctoral dissertation (Dr.Habil): <i><font color="300080">Some problems of synthesis of parallel circuits.</font></i> MSU, 2021.
+doctoral dissertation (Dr.Habil): <i><font color="300080">Some problems of the synthesis of parallel circuits.</font></i> MSU, 2021.
 <a href="./papers/diss2021.pdf">PDF</a> (in Russian) <a href="https://istina.msu.ru/dissertations/378944357">web-page</a>
 </div>
 
@@ -1139,7 +1139,7 @@ Plenary talk: PTK'19 conference (online, 2021). original <a href="./papers/slide
 </div>
 
 <div class="comm">
- &#9672 An illustrated survey of results on the complexity of boolean linear circuits. Closely follows the contents of our <a href="#book">book</a>, also including some recent results.
+ &#9672 An illustrated survey of results on the complexity of boolean linear circuits. Closely follows the contents of our <a href="#book">book</a>, and also includes some recent results.
 </div>
 
 
@@ -1168,6 +1168,20 @@ Report: seminar MVK - &#8220Mathematical problems of cybernetics&#8221 (Moscow S
 
 <div class="comm">
  &#9672 A brief exposition of results from [<a href="#p39">39</a>].
+</div>
+
+
+<p> </p>
+<div class="cite">
+Sergeev I. S. <i><font color="006030"> Asymptotically fast sorting.</font></i>  <a href="./papers/sort2021eng.pdf">PDF</a>
+</div>
+
+<div class="comm">
+Report: seminar MVK - &#8220Mathematical problems of cybernetics&#8221 (Moscow State University, 2021)
+</div>
+
+<div class="comm">
+ &#9672 A brief exposition of results from [<a href="#p38">38</a>].
 </div>
 
 
@@ -1209,7 +1223,7 @@ Plenary talk: <a href="https://www.mathnet.ru/php/conference.phtml?confid=773&op
 </div>
 
 <div class="comm">
- &#9672 A survey of results on the complexity of some linear mappings with respect to implementation by boolean and arithmetic linear circuits.
+ &#9672 A survey of results on the complexity of some linear mappings, with respect to the implementation by boolean and arithmetic linear circuits.
 </div>
 
 
