--- a/index.html
+++ b/index.html
@@ -1111,7 +1111,7 @@ Report: seminar MVK - &#8220Mathematical problems of cybernetics&#8221 (Moscow S
 </div>
 
 <div class="comm">
- &#9672 An illustrated exposition of results from [<a href="#p44">44</a>].
+ &#9672 An illustrated exposition of the results from [<a href="#p44">44</a>].
 </div>
 
 
@@ -1167,7 +1167,7 @@ Report: seminar MVK - &#8220Mathematical problems of cybernetics&#8221 (Moscow S
 </div>
 
 <div class="comm">
- &#9672 A brief exposition of results from [<a href="#p39">39</a>].
+ &#9672 A brief exposition of the results from [<a href="#p39">39</a>].
 </div>
 
 
@@ -1181,7 +1181,7 @@ Report: seminar MVK - &#8220Mathematical problems of cybernetics&#8221 (Moscow S
 </div>
 
 <div class="comm">
- &#9672 A brief exposition of results from [<a href="#p38">38</a>].
+ &#9672 A brief exposition of the results from [<a href="#p38">38</a>].
 </div>
 
 
@@ -1195,7 +1195,7 @@ Report: seminar MVK - &#8220Mathematical problems of cybernetics&#8221 (Moscow S
 </div>
 
 <div class="comm">
- &#9672 A brief exposition of results from [<a href="#p31">31</a>] and slightly beyond.
+ &#9672 A brief exposition of the results from [<a href="#p31">31</a>] and slightly beyond.
 </div>
 
 
