--- a/index.html
+++ b/index.html
@@ -1131,6 +1131,22 @@ Plenary talk: DMTCS'11 conference (Moscow, 2023). original <a href="./papers/sli
 
 <p> </p>
 <div class="cite">
+Sergeev I. S. <i><font color="006030"> Generalization of the Khrapchenko method for <font face="serif">k</font>-ary bases.</font></i>  <a href="./papers/khr2023eng.pdf">PDF</a>
+</div>
+
+<div class="comm">
+Report: seminar SCCS - &#8220Synthesis and complexity of control systems&#8221 (Moscow State University, 2023); 
+seminar MVK - &#8220Mathematical problems of cybernetics&#8221 (Moscow State University, 2021).
+
+</div>
+
+<div class="comm">
+ &#9672 An exposition of the results from [<a href="#p39">39</a>], with some proofs.
+</div>
+
+
+<p> </p>
+<div class="cite">
 Sergeev I. S. <i><font color="006030"> Complexity of boolean linear operators.</font></i>  <a href="./papers/linoper2021eng.pdf">PDF</a>
 </div>
 
@@ -1154,20 +1170,6 @@ Report: Research seminar on algebra (Moscow State University, 2021)
 
 <div class="comm">
  &#9672 A collection of examples of how the algebraic method (i.e. transition between algebraic structures) reduces the complexity of computations.
-</div>
-
-
-<p> </p>
-<div class="cite">
-Sergeev I. S. <i><font color="006030"> Khrapchenko method for <font face="serif">k</font>-ary bases.</font></i>  <a href="./papers/khr2021eng.pdf">PDF</a>
-</div>
-
-<div class="comm">
-Report: seminar MVK - &#8220Mathematical problems of cybernetics&#8221 (Moscow State University, 2021)
-</div>
-
-<div class="comm">
- &#9672 A brief exposition of the results from [<a href="#p39">39</a>].
 </div>
 
 
