--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ convolution of order <font face="serif"><i>n</i></font> over <font face="serif">
 
 <div class="cite">
 <font color="300080">[43]</font> Sergeev I. S. <i><font color="300080"> On the complexity of fanout-bounded parallel prefix circuits.</font></i>
-(submitted to <i>Diskretnyi Analiz i Issledovanie Operatsii</i>)
+Diskretnyi Analiz i Issledovanie Operatsii. 2024. <b>31</b>(4), 151-167. <a href="https://doi.org/10.33048/daio.2024.31.791">DOI</a> (in Russian)
 </div>
 
 <div class="comm">
@@ -1135,7 +1135,7 @@ Sergeev I. S. <i><font color="006030"> Generalization of the Khrapchenko method 
 </div>
 
 <div class="comm">
-Report: seminar SCCS - &#8220Synthesis and complexity of control systems&#8221 (Moscow State University, 2023); 
+Report: seminar SCCS - &#8220Synthesis and complexity of control systems&#8221 (Moscow State University, 2023);
 seminar MVK - &#8220Mathematical problems of cybernetics&#8221 (Moscow State University, 2021).
 
 </div>
