--- a/index.html
+++ b/index.html
@@ -207,9 +207,11 @@ The list of my scientific papers is also available at
 </div>
 
 <div class="comm">
- &#9672 An extended and improved version of [<a href="#p25">25</a>] containing new upper bounds 
+ &#9672 An extended and improved version of [<a href="#p25">25</a>] containing new upper bounds
  on the formula depth and complexity of general symmetric boolean functions.
- Separately, a refined approach for implementation of threshold symmetric functions is proposed. 
+ Separately, a refined approach for implementation of threshold symmetric functions is proposed.
+ For example, over the basis of all binary boolean functions the complexity of general symmetric functions of <font face="serif"><i>n</i></font> variables,
+ the counting function of <font><i>n</i></font> variables, and the majority function of <font><i>n</i></font> variables are <font face="serif"><i>O</i>(<i>n</i><sup>2.85</sup>)</font>, <font face="serif"><i>O</i>(<i>n</i><sup>2.82</sup>)</font>, <font face="serif"><i>O</i>(<i>n</i><sup>2.77</sup>)</font>, respectively.
 </div>
 
 <p> <a name="p44"></a> </p>
@@ -598,9 +600,9 @@ Matematicheskie Zametki</i>)
 
 <div class="comm">
  &#9672 Exploiting L. G. Valiant's idea of approximate computation of threshold symmetric functions, we further improve upper bounds [<a href="#p21">21</a>, <a href="#p22">22</a>] on the depth and complexity of general symmetric boolean functions, and, particularly, of counting and threshold functions. As a consequence, we obtain new record asymptotic bounds for the depth of multiplication of <font face="serif"><i>n</i></font>-bit numbers: <font face="serif">4.02 log<sub>2</sub><i>n</i></font> in the full binary boolean basis, and <font face="serif">5.14 log<sub>2</sub><i>n</i></font> in the standard boolean basis <font face="serif">{&#8744, &#8743, &#175}</font>. New bounds are nonconstructive.
- 
+
   <br> &#8984 The obtained bounds are further improved and the method is refined in the extended version [<a href="#p45">45</a>] of this paper.
- 
+
 </div>
 
 <p> <a name="p24"></a></p>
