--- a/index.html
+++ b/index.html
@@ -150,9 +150,10 @@ algorithms etc.).
                         Igor S. Sergeev
                         <h4> Etudes on the methods of designing efficient circuits </h4>
                         I've prepared a draft of the book illustrating ideas behind the
-                        methods of synthesis of fast circuits (in Russian).
+                        methods of synthesis of fast circuits.
                         <p> </p>
-                        <a href="./papers/S-book_081124.pdf">Current version</a> (dated by 08.11.2024) <a href="http://dx.doi.org/10.13140/RG.2.2.10934.78400">DOI</a>
+                        Current version (dated by 21.02.2025) <a href="./papers/S-book_210225.pdf">RUS</a> <a href="./papers/S-book_eng_210225.pdf">ENG</a>
+                        <a href="http://dx.doi.org/10.13140/RG.2.2.10934.78400">DOI</a>
                    </td>
                 </tr>
        </tbody>
