--- a/index.html
+++ b/index.html
@@ -414,7 +414,8 @@ PDF is available on the <a href="https://keldysh.ru/mvk/index.php?id=vypusk-20">
 <div class="cite">
 <font color="300080">[35]</font> Gashkov S. B., Sergeev I. S. <i><font color="300080"> On the meaning of works by V. M. Khrapchenko.</font></i>   Prikladnaya Diskretnaya Matematika (Applied Discrete Mathematics). 2020. 2(48), 109-124. <a href="https://doi.org/10.17223/20710410/48/10">DOI</a>
     PDF (in Russian) is available on the
-    <a href="http://journals.tsu.ru/pdm/en/&journal_page=archive&id=1984&article_id=44368">web-page</a>
+    <a href="http://journals.tsu.ru/pdm/en/&journal_page=archive&id=1984&article_id=44368">web-page</a>;
+    English self-translation: <a href="./papers/VMK_eng.pdf">PDF</a>
 </div>
 
 <div class="comm">
